# tapyr-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  quality_checks.sh  requirements.txt  ruff.toml  run_tests_and_bandit.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yaml  pyshiny-tests.yaml
notebooks/: 01_experiments.ipynb
pyshiny_template/: config.py  settings.py
pyshiny_template/logic/: utils.py
pyshiny_template/utils/: utils.py
pyshiny_template/view/root/: __init__.py  ui.py
tapyr_template/: settings.py
tapyr_template/view/root/: server.py  ui.py
tests/: conftest.py
tests/playwirght/: conftest.py  test_ui.py
tests/pytest/: test_utils.py
tests/utils/: test_helpers.py
www/: style.css
