[tool.poetry]
name = "pyshiny-template"
version = "0.1.0"
description = ""
authors = ["Piotr Pasza Storozenko <piotr@appsilon.com>"]
readme = "README.md"
packages = [{include = "pyshiny_template"}]

[tool.coverage.run]
source = ["pyshiny_template"]

[tool.poetry.dependencies]
python = "^3.10"
shiny = "^0.9.0"
rich = "^13.7.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"  # For debugging, print() on steroids
ipykernel = "^6.29.3"  # For running Jupyter notebooks in VS Code
ipywidgets = "^8.1.2"  # For running Jupyter notebooks in VS Code
pre-commit = "^3.6.2"
ruff = "^0.3.5"
rsconnect-python = "^1.22.0"
pytest = "^8.1.1"
playwright = "^1.42.0"
pytest-playwright = "^0.4.4"
requests = "^2.31.0"
tenacity = "^8.2.3"
pytest-watch = "^4.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov . --cov-report=lcov:lcov.info --cov-report=term"
